Add reference DOIs and remove unused entry

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -34,7 +34,8 @@
   month     =  oct,
   year      =  2020,
   copyright = "https://creativecommons.org/licenses/by/4.0",
-  language  = "en"
+  language  = "en",
+  doi       = "10.1186/s13059-020-02173-2"
 }
 
 @ARTICLE{Gonatopoulos-Pournatzis2020-mv,
@@ -73,7 +74,8 @@
   pages     = "638--648",
   month     =  may,
   year      =  2020,
-  language  = "en"
+  language  = "en",
+  doi       = "10.1038/s41587-020-0437-z"
 }
 
 @ARTICLE{Ito2021-wn,
@@ -113,7 +115,8 @@
   month     =  dec,
   year      =  2021,
   copyright = "https://www.springernature.com/gp/researchers/text-and-data-mining",
-  language  = "en"
+  language  = "en",
+  doi       = "10.1038/s41588-021-00967-z"
 }
 
 @ARTICLE{Koferle2022-rs,
@@ -156,7 +159,8 @@
                interaction; loss of chromosome Y; paralog; sex chromosomes;
                synthetic lethality",
   copyright = "http://creativecommons.org/licenses/by/4.0/",
-  language  = "en"
+  language  = "en",
+  doi       = "10.1016/j.celrep.2022.110636"
 }
 
 @ARTICLE{Parrish2021-pd,
@@ -192,7 +196,8 @@
   keywords  = "CRISPR; cancer biology; cancer evolution; functional genomics;
                paralogs; synthetic lethality; tumor suppressor genes",
   copyright = "http://creativecommons.org/licenses/by-nc-nd/4.0/",
-  language  = "en"
+  language  = "en",
+  doi       = "10.1016/j.celrep.2021.109597"
 }
 
 @ARTICLE{Tang2022-dp,
@@ -221,7 +226,8 @@
   keywords  = "Biotechnology and bioengineering; CRISPR; High Throughput
                Screening; Molecular Biology",
   copyright = "http://creativecommons.org/licenses/by-nc-nd/4.0/",
-  language  = "en"
+  language  = "en",
+  doi       = "10.1016/j.xpro.2022.101556"
 }
 
 @ARTICLE{Thompson2021-xv,
@@ -257,7 +263,8 @@
   month     =  feb,
   year      =  2021,
   copyright = "https://creativecommons.org/licenses/by/4.0",
-  language  = "en"
+  language  = "en",
+  doi       = "10.1038/s41467-021-21478-9"
 }
 
 @ARTICLE{Dandage2021-sp,
@@ -278,7 +285,8 @@
   month     =  dec,
   year      =  2021,
   copyright = "http://www.elsevier.com/open-access/userlicense/1.0/",
-  language  = "en"
+  language  = "en",
+  doi       = "10.1016/j.cels.2021.08.007"
 }
 
 @ARTICLE{Ryan2023-bw,
@@ -310,16 +318,8 @@
   keywords  = "CRISPR screening; paralogs; synthetic lethality; target
                identification",
   copyright = "http://creativecommons.org/licenses/by/4.0/",
-  language  = "en"
-}
-
-@misc{hyperfine,
-  title = {Fidgit: An ungodly union of GitHub and Figshare},
-  author = {A. M. Smith and K. Thaney and M. Hahnel},
-  year = {2020},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  url = {https://github.com/arfon/fidgit}
+  language  = "en",
+  doi       = "10.1016/j.trecan.2023.02.002"
 }
 
 @software{Peter_hyperfine_2023,
@@ -366,7 +366,8 @@ year = {2023}
   pages     = "357--359",
   month     =  mar,
   year      =  2012,
-  language  = "en"
+  language  = "en",
+  doi       = "10.1038/nmeth.1923"
 }
 
 @misc{levenshtein,
@@ -388,5 +389,6 @@ year = {2023}
   month     =  feb,
   year      =  2025,
   note      = "Title of the publication associated with this dataset: CRAN:
-               Contributed Packages"
+               Contributed Packages",
+  doi       = "10.32614/CRAN.package.gimap"
 }
